# Meeko

./: .gitignore  README.md  debug_routes.py  display_controller.py  docker-compose.yml  motor.py  pinConnections.txt  pyproject.toml  server.py  wakeword.py
OpenWakewordCutomModel/: meeko_v0.1.onnx  meeko_v0.1.tflite
home_assistant/: intent_script.yaml  rest_commands.yaml
home_assistant/custom_sentences/en/: meeko.yaml
templates/: controller.html
