[project]
name = "raspberry-pi-car"
version = "0.1.0"
description = "Flask server for controlling a Raspberry Pi robot car"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "RPi.GPIO>=0.7.1",
    "adafruit-circuitpython-rgb-display>=3.14.3",
    "pillow>=12.0.0",
    "opencv-python>=4.8.0",
    "openwakeword==0.5.1",
    "pyaudio>=0.2.14",
    "numpy<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
